[tool.poetry]
name = "relay"
version = "0.1.0"
description = ""
authors = ["adaniel105 <dakinola18@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
pydantic = "^2.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
